Fixed CSS layout bug in Firefox.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 * { box-sizing: border-box; }
 
 body { font-family: sans-serif; }
-.note { font-size: 24px; }
 
 main {
     position: absolute;
@@ -61,6 +60,8 @@ main {
 .violet { background: #8767A6; }
 
 .note {
+    font-size: 24px;
+    word-wrap: break-word;
     padding: 0.5em;
     box-shadow: 0px 0px 3px rgba(0, 0, 0, .8);
     width: 150px;
